# cppl

./: .gitmodules
task_3_1/: CMakeLists.txt  main.cpp
task_3_2/: CMakeLists.txt  main.cpp
task_4_1/: CMakeLists.txt  List.cpp  List.h  ListNode.h  main.cpp  test-main.cpp
task_4_2/: CMakeLists.txt  ListNode.cpp  test-main.cpp
task_5_1/: CMakeLists.txt  main.cpp
task_5_2/: CMakeLists.txt  main.cpp
task_5_3/: CMakeLists.txt  main.cpp
task_7_1/: CMakeLists.txt  main.cpp
task_7_2/: CMakeLists.txt  main.cpp
task_8_1/: CMakeLists.txt  main.cpp
task_8_2/: CMakeLists.txt  main.cpp
